xserver-xorg-video-intel (2:2.14.0-1ubuntu7) natty; urgency=low

  * Rename 110_from_git_da990536eca09c6de74627541cd56ecfad925eda.patch
    to 108_undo_dmg_trans_before_append.patch for clarity.
  * Add 109_dont_reconstruct_glyph_cache_on_rotate.patch: Fixes font
    corruption (missing glyphs) on rotated screens.  (fdo #33412)

 -- Bryce Harrington <bryce@ubuntu.com>  Fri, 11 Feb 2011 14:03:11 -0800

xserver-xorg-video-intel (2:2.14.0-1ubuntu6) natty; urgency=low

  * 110_from_git_da990536eca09c6de74627541cd56ecfad925eda.patch:
    - cherry-pick fix from upstream git to fix graphics corruption
      (LP: #707236)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 14:49:50 +0100

xserver-xorg-video-intel (2:2.14.0-1ubuntu5) natty; urgency=low

  * control: For apport hook, depend on apport, intel-gpu-tools, and
    python instead of python-dev.

 -- Bryce Harrington <bryce@ubuntu.com>  Tue, 01 Feb 2011 09:59:31 -0800

xserver-xorg-video-intel (2:2.14.0-1ubuntu4) natty; urgency=low

  * Rebuild against Xserver 1.10

 -- Bryce Harrington <bryce@ubuntu.com>  Mon, 31 Jan 2011 18:53:00 -0800

xserver-xorg-video-intel (2:2.14.0-1ubuntu3) natty; urgency=low

  * debian/patches/101_copy-fb.patch: Fix 1.10 video ABI codepath

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Thu, 27 Jan 2011 18:53:35 +1100

xserver-xorg-video-intel (2:2.14.0-1ubuntu2) natty; urgency=low

  * debian/patches/101_copy-fb.patch:
    - Remove call to non-existent intel_batch_wait_last function.  Fixes
      X crash on startup due to missing symbols.
    - Update to build against both X server 1.9 and 1.10 ABIs.

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Thu, 27 Jan 2011 11:40:37 +1100

xserver-xorg-video-intel (2:2.14.0-1ubuntu1) natty; urgency=low

  * New upstream release.
    - Sandy Bridge RENDER and XVIDEO acceleration
    - i965+ RENDER acceleration
    - Fix backlight on Arrandale (LP: #705949)
  * Remaining Ubuntu Changes: